--- a/LearnOpenGLAdvanced.vcxproj
+++ b/LearnOpenGLAdvanced.vcxproj
@@ -22,6 +22,8 @@
     <ClCompile Include="Header Files\camera.cpp" />
     <ClCompile Include="Header Files\shader.cpp" />
     <ClCompile Include="Header Files\stb_image.cpp" />
+    <ClCompile Include="mesh.cpp" />
+    <ClCompile Include="model.cpp" />
     <ClCompile Include="Source Files\External\glad.c" />
     <ClCompile Include="Source Files\program.cpp" />
   </ItemGroup>
@@ -29,6 +31,8 @@
     <ClInclude Include="Header Files\camera.h" />
     <ClInclude Include="Header Files\shader.h" />
     <ClInclude Include="Header Files\stb_image.h" />
+    <ClInclude Include="mesh.h" />
+    <ClInclude Include="model.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
