--- a/LearnOpenGLAdvanced.vcxproj.filters
+++ b/LearnOpenGLAdvanced.vcxproj.filters
@@ -19,6 +19,9 @@
     <Filter Include="Source Files\External">
       <UniqueIdentifier>{d2a07971-bec5-4d0f-b68d-49147c707c6c}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Resource Files\Backpack">
+      <UniqueIdentifier>{fbea109f-178d-439a-ae96-3556fb03b189}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source Files\program.cpp">
@@ -59,5 +62,36 @@
     <ClInclude Include="Header Files\model.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Resource Files\Backpack\specular.jpg">
+      <Filter>Resource Files\Backpack</Filter>
+    </Image>
+    <Image Include="Resource Files\Backpack\ao.jpg">
+      <Filter>Resource Files\Backpack</Filter>
+    </Image>
+    <Image Include="Resource Files\Backpack\diffuse.jpg">
+      <Filter>Resource Files\Backpack</Filter>
+    </Image>
+    <Image Include="Resource Files\Backpack\normal.png">
+      <Filter>Resource Files\Backpack</Filter>
+    </Image>
+    <Image Include="Resource Files\Backpack\roughness.jpg">
+      <Filter>Resource Files\Backpack</Filter>
+    </Image>
+    <Image Include="Resource Files\Backpack\backpack.obj">
+      <Filter>Resource Files\Backpack</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resource Files\Backpack\backpack.mtl">
+      <Filter>Resource Files\Backpack</Filter>
+    </None>
+    <None Include="Source Files\Shaders\frag.glsl">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
+    <None Include="Source Files\Shaders\vert.glsl">
+      <Filter>Source Files\Shaders</Filter>
+    </None>
   </ItemGroup>
 </Project>
